--- a/src/app/mainroot/previewvenue/previewvenue.component.html
+++ b/src/app/mainroot/previewvenue/previewvenue.component.html
@@ -9,108 +9,169 @@
       </div>
     </div>
   </div>
-  <div *ngIf="venue.venueimage_set.length > 0" class="col-12">
-    <slideshow
-      class="card-container-img"
-      [showArrows]="true"
-      [imageUrls]="venue.venueimage_set"
-      [height]="venueslideshowheight">
-    </slideshow>
-  </div>
-  <div id="VenueMain" class="Section">
-    <div class="FirstHead">
-      {{venue.name}}
+  <div *ngIf="!choicesload" class="container">
+    <div *ngIf="venue.venueimage_set.length > 0" class="col-12">
+      <slideshow
+        class="card-container-img"
+        [showArrows]="true"
+        [imageUrls]="venue.venueimage_set"
+        [height]="venueslideshowheight">
+      </slideshow>
     </div>
-    <div class="SecHead">
-      {{venue.searchneighborhood}}
-    </div>
-    <div class="SecHead">
-      <div *ngIf="venue.cuisine1 != null" id="Type" class="span-style">{{venue.cuisine1}}</div>
-      <div *ngIf="venue.cuisine2 != null" class="span-style">{{venue.cuisine2}}</div>
-      <div *ngIf="venue.experientialtype != null" class="span-style">{{venue.experientialtype}}</div>
-      <div *ngIf="venue.pricerating == 1" class="span-style">$30 and under</div>
-      <div *ngIf="venue.pricerating == 2" class="span-style">$31 to $51</div>
-      <div *ngIf="venue.pricerating == 3" class="span-style">$51 and over</div>
-    </div>
-  </div>
-
-  <div id="VenueDes" class="Section">
-    <div class="SecHead">Description</div>
-    <p>{{venue.description}}</p>
-  </div>
-
-  <div id="VenueRoom" class="Section">
-    <div class="SecHead">Rooms Available</div>
-    <div class="row" *ngIf ="venue.room_set.length > 0 || venue.fullbuyout">
-      <div class= "col-sm-12 col-md-6 col-lg-4 pb-4" *ngIf="venue.fullbuyout && venue.fullbuyoutonline">
-        <div class="card-container">
-          <div class="card-container-img" [ngStyle]="{'background-image': 'url(' + venue.venueimage_set[0] + ')'}">
-          </div>
-          <div (click)="navfullbuyout()" class="card-container-information">
-            <div class="card-container-information__main">
-              Full Buyout
-            </div>
-            <p class="card-container-information__sub">
-              <span id="seat-number" class="card-container-information__sub--price">{{ venue.fullbuyoutseatedcapacity }} Seated</span>
-              <span id="stand-number" class="card-container-information__sub--room">{{ venue.fullbuyoutstandingcapactiy }} Standing</span>
-            </p>
-
-          </div>
-
-        </div>
+    <div id="VenueMain" class="Section">
+      <div class="FirstHead">
+        {{venue.name}}
       </div>
-      <div class="col-sm-12 col-md-6 col-lg-4 pb-4" *ngFor="let room of venue.room_set; let i = index">
-        <div class="card-container">
-          <div *ngIf="room.roomimage_set.length > 0" class="card-container-img">
-            <slideshow
-              [showArrows]="true"
-              [imageUrls]="room.roomimage_set">
-            </slideshow>
-          </div>
-          <div (click)="navtoroom(i)" class="card-container-information">
-            <div class="card-container-information__main">
-              {{ room.name }}
-            </div>
-
-            <p class="card-container-information__sub">
-              <span *ngIf="room.privateroom == true" class="card-container-information__sub--food">Private</span>
-              <span *ngIf="room.semiprivateroom == true" class="card-container-information__sub--food">Semi-Private</span>
-
-              <span id="seat-number" class="card-container-information__sub--price">{{ room.seatedcapacity }} Seated</span>
-              <span id="stand-number" class="card-container-information__sub--room">{{ room.standingcapacity }} Standing</span>
-            </p>
-          </div>
-        </div>
+      <div class="SecHead">
+        <div *ngIf="venue.cuisine1 != null" id="Type" class="span-style">{{venue.cuisine1}}</div>
+        <div *ngIf="venue.cuisine2 != null" class="span-style"> &nbsp; {{venue.cuisine2}}</div>
+        <div *ngIf="venue.experientialtype != null" class="span-style"> &nbsp; {{venue.experientialtype}}</div>
+        <div *ngIf="venue.pricerating == 1" class="span-style"> &nbsp; $30 and under</div>
+        <div *ngIf="venue.pricerating == 2" class="span-style"> &nbsp;$31 to $51</div>
+        <div *ngIf="venue.pricerating == 3" class="span-style"> &nbsp;$51 and over</div>
+      </div>
+      <div class="SecHead">
+        {{venue.searchneighborhood}}
       </div>
     </div>
-  </div>
 
-  <div id="VenueMenu" class="Section">
+    <div id="VenueDes" class="Section">
+      <div class="SecHead">Description</div>
+      <p>{{venue.description}}</p>
+    </div>
+
+    <div id="VenueRoom" class="Section">
+      <div class="SecHead">Rooms Available</div>
+      <div class="row" *ngIf ="venue.room_set.length > 0 || venue.fullbuyout">
+        <div class= "col-sm-12 col-md-6 col-lg-4 pb-4" *ngIf="venue.fullbuyout && venue.fullbuyoutonline">
+          <div class="card-container">
+            <div (click)="navfullbuyout()" class="clickoverlay">
+              <!-- overlay div for a clickable slide show frame -->
+            </div>
+            <div *ngIf="venue.venuefullbuyoutphoto_set.length < 1" class="card-container-img" [ngStyle]="{'background-image': 'url(' + venue.venueimage_set[0] + ')'}">
+            </div>
+            <div *ngIf="venue.venuefullbuyoutphoto_set.length > 0" class="card-container-img">
+              <slideshow
+                [showArrows]="true"
+                [imageUrls]="venue.venuefullbuyoutphoto_set">
+              </slideshow>
+
+            </div>
+            <div (click)="navfullbuyout()" class="card-container-information">
+              <div class="card-container-information__main">
+                Full Buyout
+              </div>
+              <p class="card-container-information__sub">
+                <span id="seat-number" class="card-container-information__sub--food">Private</span>
+                <span id="seat-number" class="card-container-information__sub--price">{{ venue.fullbuyoutseatedcapacity }} Seated</span>
+                <span id="stand-number" class="card-container-information__sub--price">{{ venue.fullbuyoutstandingcapactiy }} Standing</span>
+              </p>
+              <div class="col-12 STnopadding">
+                <div class="float-left STnopadding">
+                  <div *ngIf="venue.fullbuyoutminspend == null" class="card-min-spend STnopadding">
+                    Minimum Spend : Please Inquire
+                  </div>
+                  <div *ngIf="venue.fullbuyoutminspend != null" class="card-min-spend STnopadding">
+                    Minimum Spend : {{venue.fullbuyoutminspend}}
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4 pb-4" *ngFor="let room of venue.room_set; let i = index">
+          <div class="card-container">
+            <div (click)="navtoroom(i)" class="clickoverlay">
+              <!-- overlay div for a clickable slide show frame -->
+            </div>
+            <div *ngIf="room.roomimage_set.length > 0" class="card-container-img">
+              <slideshow
+                [showArrows]="true"
+                [imageUrls]="room.roomimage_set">
+              </slideshow>
+            </div>
+            <div (click)="navtoroom(i)" class="card-container-information">
+              <div class="card-container-information__main">
+                {{ room.name }}
+              </div>
+
+              <p class="card-container-information__sub">
+                <span *ngIf="room.privateroom == true" class="card-container-information__sub--food">Private</span>
+                <span *ngIf="room.semiprivateroom == true" class="card-container-information__sub--food">Semi-Private</span>
+                <span *ngIf="room.seatedcapacity == null" id="seat-number" class="card-container-information__sub--price">N/A Seated</span>
+                <span *ngIf="room.seatedcapacity != null" id="seat-number" class="card-container-information__sub--price">{{ room.seatedcapacity }} Seated</span>
+                <span *ngIf="room.standingcapacity == null" id="stand-number" class="card-container-information__sub--room">N/A Standing</span>
+                <span *ngIf="room.standingcapacity != null" id="stand-number" class="card-container-information__sub--room">{{ room.standingcapacity }} Standing</span>
+              </p>
+              <div class="col-12 STnopadding">
+                <div class="float-left STnopadding">
+                  <div *ngIf="room.minimumspend == null" class="card-min-spend STnopadding">
+                    Minimum Spend : Please Inquire
+                  </div>
+                  <div *ngIf="room.minimumspend != null" class="card-min-spend STnopadding">
+                    Minimum Spend : {{room.minimumspend}}
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div *ngIf="venue.tour360url != null" class="row">
+      <div class="col-12">
+        <iframe [src]="sanitizer.bypassSecurityTrustResourceUrl(venue.tour360url)" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+    </div>
+
+    <div id="VenueMenu" class="Section">
     <span class="SecHead span-style__lg">
-      Sample Menus:
+      Menus + Packages
     </span>
-    <span>
+      <br>
+      <br>
+      <span *ngIf="venue.venuesamplemenu_set.length < 1">
+      Please contact venue for more information
+    </span>
+      <span *ngIf="venue.venuesamplemenu_set.length > 0">
       <a *ngFor="let menu of venue.venuesamplemenu_set" [href]="menu.menupdfuri" target="_blank" class="span-style__mid link-style">{{menu.name}}</a>
     </span>
-  </div>
-
-  <div class="Section" id="VenueMap">
-    <iframe width="100%" height="450" frameborder="0" style="border:0" [src]='sanitizer.bypassSecurityTrustResourceUrl(mapsurl)'
-            allowfullscreen></iframe>
-  </div>
-
-  <div id="VenueParking" class="Section">
-    <div class="SecHead">
-      Parking Options:
     </div>
-    <p>
-      <span *ngIf="venue.valetparking == true" class="span-style">Valet: ${{venue.valetparkingamount}}</span>
-      <span *ngIf="venue.onsiteparking == true" class="span-style">Onsite Parking Available</span>
-      <span class="span-style">
+
+    <div *ngIf="venue.cuisineimage_set.length > 2" id="foodcarousel" class="Section">
+    <span class="SecHead span-style__lg">
+      Cuisine Images
+    </span>
+      <ngx-slick-carousel class="carousel"
+                          #slickModal="slick-carousel"
+                          [config]="slideConfig">
+        <div ngxSlickItem *ngFor="let slide of venue.cuisineimage_set" [ngStyle]="{'background-image': 'url(' + slide.imageurl + ')'}" class="slide cuisineimage">
+
+        </div>
+      </ngx-slick-carousel>
+
+    </div>
+
+    <div class="Section" id="VenueMap">
+      <iframe width="100%" height="450" frameborder="0" style="border:0" [src]='sanitizer.bypassSecurityTrustResourceUrl(mapsurl)'
+              allowfullscreen></iframe>
+    </div>
+
+    <div id="VenueParking" class="Section">
+      <div class="SecHead">
+        Parking Options:
+      </div>
+      <p>
+        <span *ngIf="!venue.valetparking" class="span-style">Valet: Not Available</span>
+        <span *ngIf="venue.valetparking == true" class="span-style">Valet: ${{venue.valetparkingamount}}</span>
+        <span *ngIf="venue.onsiteparking == true" class="span-style">Onsite Parking Available</span>
+        <span *ngIf="!venue.onsiteparking" class="span-style">Onsite Parking Not  Available</span>
+        <span class="span-style">
         <a [href]="spotherourl" target="_blank" class="link-style">Reserved Parking</a>
       </span>
-    </p>
+      </p>
+    </div>
   </div>
-
-
 </div>
