--- a/src/app/mainroot/footer/footer.component.html
+++ b/src/app/mainroot/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="container-fluid">
   <div class="row">
-    <div class="col-lg-6" id="footer-link">
-      <div id="social-link">
+    <div class="col-12" id="footer-link">
+      <div class="text-center" id="social-link">
         <ul class="social">
           <li><a href="https://www.facebook.com/suitsandtables/" target="_blank"><i class="fa fa-facebook fa-lg"></i></a></li>
           <li><a href="https://twitter.com/suitsandtables?lang=en" target="_blank"><i class="fa fa-twitter fa-lg"></i></a></li>
@@ -10,7 +10,7 @@
       </div>
 
       <div id="nav-link">
-        <ul class="nav-info d-flex justify-content-between">
+        <ul class="nav-info d-flex justify-content-center">
           <li><a routerLink="/team">The Team</a></li>
           <li><a routerLink="/privacy">Privacy</a></li>
           <li><a routerLink="/terms">Terms</a></li>
@@ -19,12 +19,12 @@
       </div>
     </div>
 
-    <div class="col-lg-6 mt-5 mt-lg-0" id="footer-CompanyInfo">
-      <div id="main-info">
+    <div class="col-12" id="footer-CompanyInfo">
+      <div class="text-center" id="main-info">
         211 W Wacker Drive | Suite 300 | Chicago, IL 60606 | 312.957.7937
       </div>
 
-      <div id="sub-info">
+      <div class="text-center" id="sub-info">
         &copy; Suits And Tables Inc | All Rights Reserved
       </div>
     </div>
