--- a/src/app/venueadmin/parentadminview/venueadminparentview/venueprofile/venueprofile.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/venueprofile/venueprofile.component.html
@@ -235,7 +235,7 @@
     </div>
   </div>
   <div *ngIf="venueobject.tour360url == null && permission == 'suits'" class="col-6">
-    <form (ngSubmit)="updatevenue()" #toururlform="ngForm">
+    <form (ngSubmit)="addtour(toururlform)" #toururlform="ngForm">
     <div class="col-12">
       Submit tour url.
     </div>
