pushing the problems

--- a/src/app/mainroot/footer/footer.component.html
+++ b/src/app/mainroot/footer/footer.component.html
@@ -10,7 +10,7 @@
       </div>
 
       <div id="nav-link">
-        <ul class="nav-info d-flex justify-content-center">
+        <ul class="nav-info justify-content-center">
           <li><a routerLink="/team">The Team</a></li>
           <li><a routerLink="/privacy">Privacy</a></li>
           <li><a routerLink="/terms">Terms</a></li>
