--- a/src/app/mainroot/footer/footer.component.html
+++ b/src/app/mainroot/footer/footer.component.html
@@ -8,16 +8,20 @@
           <li><a href="https://www.instagram.com/suitsandtables/" target="_blank"><i class="fa fa-instagram fa-lg"></i></a></li>
         </ul>
       </div>
+    </div>
 
-      <div id="nav-link">
-        <ul class="nav-info justify-content-center">
-          <li><a routerLink="/team">The Team</a></li>
-          <li><a routerLink="/privacy">Privacy</a></li>
-          <li><a routerLink="/terms">Terms</a></li>
-          <li><a routerLink="/contact">Contact Us</a></li>
+    <div class="col-12 navlinks">
+      <div class="text-center">
+        <ul class="justify-content-center">
+          <li><a class="col-auto d-inline-block whitelink" routerLink='/team'>The Team</a></li>
+          <li><a class="col-auto d-inline-block whitelink" routerLink="/privacy">Privacy</a></li>
+          <li><a class="col-auto d-inline-block whitelink" routerLink="/terms">Terms</a></li>
+          <li><a class="col-auto d-inline-block whitelink" routerLink="/contact">Contact Us</a></li>
         </ul>
       </div>
     </div>
+
+
 
     <div class="col-12" id="footer-CompanyInfo">
       <div class="text-center" id="main-info">
