--- a/src/app/suitsandtablesadmin/suitssettings/suitssettings.component.html
+++ b/src/app/suitsandtablesadmin/suitssettings/suitssettings.component.html
@@ -366,6 +366,18 @@
 </div>
 <!-- experiential types and setup styles row-->
 
+<!-- how you hear about us row -->
+<div class="row">
+  <div class="col-md-5">
+    <h3>Discover Reasons</h3>
+    <form (ngSubmit)="adddiscoverreason()" #discoverreasonaddform="ngForm">
+      <input type="text" placeholder="add a "> <!-- in the middle of pushing-->
+    </form>
+
+  </div>
+</div>
+
+
 <div class="row">
   <div class="col-md-10">
     <h3>Venue Application Decline Reasons</h3>
