--- a/src/app/suitsandtablesadmin/suitssettings/suitssettings.component.html
+++ b/src/app/suitsandtablesadmin/suitssettings/suitssettings.component.html
@@ -368,13 +368,15 @@
 
 <!-- how you hear about us row -->
 <div class="row">
+  <!--
   <div class="col-md-5">
     <h3>Discover Reasons</h3>
     <form (ngSubmit)="adddiscoverreason()" #discoverreasonaddform="ngForm">
-      <input type="text" placeholder="add a "> <!-- in the middle of pushing-->
+      <input type="text" placeholder="add a ">
     </form>
 
   </div>
+  -->
 </div>
 
 
